test/bad_type_decl.zb
// error
// Copyright 2015 The Zebu Authors. All rights reserved.
// Test: malformed type declarations on regdefs and rules should error

grammar bad_type_decl ;

INTEGER=[] : [1-9][0-9]* ;	// ERROR invalid type declaration

start
  : expr
  ;

expr=123		// ERROR invalid type declaration
	: '0'
	;
